--- a/nginx.conf
+++ b/nginx.conf
@@ -2,6 +2,8 @@ user root;
 
 worker_processes 2;
 
+error_log  /var/log/nginx/error.log warn;
+
 events {
   worker_connections 1024;
 }
@@ -9,6 +11,12 @@ events {
 http {
   include mime.types;
   default_type application/octet-stream;
+
+ log_format  main  '$remote_addr - $remote_user [$time_local] "$request" '
+                    '$status $body_bytes_sent "$http_referer" '
+                    '"$http_user_agent" "$http_x_forwarded_for"';
+
+  access_log  /var/log/nginx/access.log  main;
 
   sendfile on;
 
