--- a/php-fpm.conf
+++ b/php-fpm.conf
@@ -29,7 +29,7 @@
 ; in a local file.
 ; Note: the default prefix is /var
 ; Default Value: log/php-fpm.log
-error_log = /var/log/php-fpm.log
+error_log = /proc/self/fd/2
 
 ; syslog_facility is used to specify what type of program is logging the
 ; message. This lets syslogd specify that messages from different facilities
@@ -378,7 +378,7 @@ pm.max_spare_servers = 3
 
 ; The access log file
 ; Default: not set
-;access.log = log/$pool.access.log
+access.log = /proc/self/fd/2
 
 ; The access log format.
 ; The following syntax is allowed
