--- a/nginx-supervisor.ini
+++ b/nginx-supervisor.ini
@@ -5,12 +5,19 @@ nodaemon=true
 command = /usr/sbin/nginx
 user = root
 autostart = true
-stdout_logfile=/dev/stdout
-stdout_logfile_maxbytes=0
+autorestart=true
+stdout_events_enabled=true
+stderr_events_enabled=true
 
 [program:php-fpm]
 command = /usr/bin/php-fpm -F
 user = root
 autostart = true
-stdout_logfile=/dev/stdout               
-stdout_logfile_maxbytes=0
+stdout_events_enabled=true
+stderr_events_enabled=true
+
+[eventlistener:stdout]
+command = supervisor_stdout
+buffer_size = 100
+events = PROCESS_LOG
+result_handler = supervisor_stdout:event_handler
