--- a/nginx.conf
+++ b/nginx.conf
@@ -1,8 +1,8 @@
 user root;
 
-worker_processes 2;
+worker_processes 5;
 
-error_log  /var/log/nginx/error.log warn;
+error_log  /dev/stderr debug;
 
 events {
   worker_connections 1024;
@@ -16,7 +16,7 @@ http {
                     '$status $body_bytes_sent "$http_referer" '
                     '"$http_user_agent" "$http_x_forwarded_for"';
 
-  access_log  /var/log/nginx/access.log  main;
+  access_log  /dev/stdout  main;
 
   sendfile on;
 
