--- a/php-fpm.conf
+++ b/php-fpm.conf
@@ -29,7 +29,7 @@
 ; in a local file.
 ; Note: the default prefix is /var
 ; Default Value: log/php-fpm.log
-error_log = /proc/self/fd/2
+error_log = /dev/stderr
 
 ; syslog_facility is used to specify what type of program is logging the
 ; message. This lets syslogd specify that messages from different facilities
@@ -369,7 +369,7 @@ pm.max_spare_servers = 3
 ;       anything, but it may not be a good idea to use the .php extension or it
 ;       may conflict with a real PHP file.
 ; Default Value: not set
-;ping.path = /ping
+ping.path = /ping
 
 ; This directive may be used to customize the response of a ping request. The
 ; response is formatted as text/plain with a 200 response code.
@@ -378,7 +378,7 @@ pm.max_spare_servers = 3
 
 ; The access log file
 ; Default: not set
-access.log = /proc/self/fd/2
+access.log = /dev/stderr
 
 ; The access log format.
 ; The following syntax is allowed
