Upgrade to php 7.1

--- a/nginx-supervisor.ini
+++ b/nginx-supervisor.ini
@@ -10,7 +10,7 @@ stdout_events_enabled=true
 stderr_events_enabled=true
 
 [program:php-fpm]
-command = /usr/bin/php-fpm -F
+command = /usr/sbin/php-fpm7 -F
 user = root
 autostart = true
 stdout_events_enabled=true
